# bc-map

./: README.md  add_buildings.js  add_junctions.js  add_junctions.py  add_parallels.js  bc.js  city.json.tgz  city_1.json  create_city.js  create_zones.js  grabber.js  index.html  main.js  make_city.js  make_city_lots.js  make_diagonal_streets.js  make_just_curves.js  make_lot_edges.js  make_lots.js  package-lock.json  package.json  possible.js  render.js  render_squares.js  split.js  webpack.config.js  zones.json
create/bc-map/: bezier_city.json  city.py  index.html  pyproject.toml
public/: What happens in July?  index.html  map.js  threedee.html
src/: building-utils.js  city-builder.js  city_builder.js  geometry-utils.js
test/: city-builder.test.js  city_builder.test.js
