[tool.poetry]
name = "bc-map"
version = "0.1.0"
description = ""
authors = ["chris-young-12-nhs <chris.young12@nhs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.2"
shapely = "^2.0.7"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
